# syn-port-scan

./: .gitignore  LICENSE  README.md  pyproject.toml
src/syn_port_scan/: __init__.py  __main__.py  log.py  main.py  packet.py  scan.py  tcpip.py  utils.py
syn_port_scan/: __init__.py  __main__.py  ansi.py  cli.py  log.py  scan.py  tcpip.py
tests/: test_packet.py  test_tcpip.py
